# edge

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cu124.yaml  example-app.cpp  extra_requirements.txt  pyproject.toml
.github/workflows/: deploy_book.yaml
cmake/: CMakeLists.new.old.txt  CMakeLists_old.txt  FindTensorRT.cmake
cpp/src/: benchmark.cpp
docs/: README.md  buildpdf  serve.py
docs/src/: __markdown.md  _config.yml  _toc.yml  compilation.md  references.bib  root.md  simple_net.pt2  training.md
docs/src/_static/: styles.css
docs/src/part1/: getting_started.md  problem.md
docs/src/part2/: adapting.ipynb  adapting.md  choosing.md  sota.md  training.md
docs/src/part3/: compilation.ipynb  compilation.md  results.md  simple_net.pt2  torch_export.ipynb
docs/src/part3/part3_artifacts/: simple_fpn.py  simple_net.py
docs/src/part4/: conclusions.md
notebooks/: 000_testing_yolo.ipynb  003_scaling_law.ipynb  004_analyze_logs.ipynb  005_download_artifacts.ipynb  006_dinov2_12ep_validation.ipynb  007_benchmark.ipynb  009_hooking_shapes.ipynb  010_testing_tensor_of_shapes.ipynb  011_exported_model_validation.ipynb  012_trt_model_validation.ipynb  013_read_trt_trace.ipynb  dinov2_interpolation.ipynb
notebooks/assets/: _run_on_acc_0_engine_engine_exectuion_profile.trace  _run_on_acc_0_engine_input_profile.trace  _run_on_acc_0_engine_layer_information.json  _run_on_acc_0_engine_output_profile.trace  wandb_export.csv
projects/dino_dinov2/configs/COCO/: dino_dinov2_b_12ep.py
projects/dino_dinov2/configs/common/: coco_detr_518.py  coco_loader_lsj_518.py
projects/dino_dinov2/configs/models/: dino_dinov2.py  dino_r50.py
projects/dino_dinov2/modeling/exportable/: __init__.py  dino.py  dino_transformer.py
scripts/: _modelopt_quantize_onnx.py  _modelopt_quantize_pt2e.py  _profile_trt.py  _quantize_cpu.py  _quantize_trt.py  _quantize_vit.py  _torch_compile.py  _torchao_quantize.py  add_conv_bf16.py  benchmark_gpu.py  export_tensorrt.py  export_tensorrt_v2.py  export_tensorrt_v3.py  quantize_cpu.py  run_dinov2.py  run_trt.py  torchao_quantize.py  train_net.py
scripts/config/benchmark_gpu/: default.yaml
scripts/config/export_tensorrt/: dinov2.yaml  vit.yaml
scripts/docs/: simple_net.py  simple_vit.py
scripts/mre/: detectron2_imagelist.py  dinov2_getattr_quant.out  dinov2_getattr_quant.py  mha_autoquant.py  modelopt_trt_decompositions.py  pt2e_const_index.py  torch_export_constant_item.py  torchao_tensorrt_import.py  trt_graphbreak_symint.py  vit_vs_dinov2_quantize.py
scripts/setup/: download_and_build_torchtrt.sh  download_libtorch.sh  download_tensorrt.sh
scripts/slurm/: install_detrex.sh  train.sh  train_resume.sh  try_train.sh
src/data/: cityscapes_datamodule.py  coco_datamodule.py
src/utils/: __init__.py  _quantization.py  io.py  quantization.py
