[tool.poetry]
name = "edge"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "3.10"
torch = {version = "^2.6.0.dev20241027+cu124", allow-prereleases = true, source = "torch-cu124"}
torchvision = {version = "^0.20.0.dev20241027+cu124", allow-prereleases = true, source = "torch-cu124"}
torch-tensorrt = {version = "^2.6.0.dev20241027+cu124", allow-prereleases = true, source = "torch-cu124"}
tensorrt = "10.3.0"
nvidia-modelopt = {extras = ["all"], version = "^0.17.0", source = "pypi-nvidia"}
onnxscript = "^0.1.0.dev20241017"

[[tool.poetry.source]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/nightly/cu124"
priority = "explicit"


[[tool.poetry.source]]
name = "pypi-nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
jupyter = "^1.1.1"
flake8 = "^7.1.1"
perfetto = "^0.11.0"
viztracer = "^0.17.0"
pandas = "^2.2.3"
jupyter-book = "^1.0.3"
livereload = "^2.7.0"
pyppeteer = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"